--- a/polybar-config.ini
+++ b/polybar-config.ini
@@ -27,7 +27,7 @@ disabled = #707880
 
 [bar/example]
 width = 100%
-height = 20pt
+height = 18pt
 radius = 0
 
 ; dpi = 96
@@ -35,7 +35,7 @@ radius = 0
 background = ${colors.background}
 foreground = ${colors.foreground}
 
-line-size = 2pt
+line-size = 1pt
 
 border-size = 0pt
 border-color = #00000000
@@ -45,21 +45,21 @@ padding-right = 1
 
 module-margin = 1
 
-separator = #
+separator = /
 separator-foreground = ${colors.disabled}
 
-font-0 = iosevka term;2
+font-0 = iosevka term:pixelsize=13;2
 
 modules-left = xworkspaces xwindow
 modules-right = battery pulseaudio memory cpu wlan date
 ;modules-right = battery filesystem pulseaudio memory cpu wlan date
 
 cursor-click = pointer
-cursor-scroll = ns-resize
+;cursor-scroll = ns-resize
 
 enable-ipc = true
 
-; tray-position = right
+tray-position = right
 
 ; wm-restack = generic
 wm-restack = bspwm
@@ -114,8 +114,8 @@ poll-interval = 5
 
 time-format = %H:%M
 
-format-charging-foreground = ${colors.primary}
-format-charging = "power++ "
+format-charging-prefix-foreground = ${colors.primary}
+format-charging-prefix = "power++ "
 label-charging = %percentage%%
 
 format-discharging-prefix-foreground = ${colors.primary}
