--- a/polybar-config.ini
+++ b/polybar-config.ini
@@ -45,10 +45,10 @@ padding-right = 1
 
 module-margin = 1
 
-separator = /
+separator = #
 separator-foreground = ${colors.disabled}
 
-font-0 = iosevka term:pixelsize=13;2
+font-0 = iosevka:pixelsize=13;2
 
 modules-left = xworkspaces xwindow
 modules-right = battery pulseaudio memory cpu wlan date
@@ -115,11 +115,11 @@ poll-interval = 5
 time-format = %H:%M
 
 format-charging-prefix-foreground = ${colors.primary}
-format-charging-prefix = "power++ "
+format-charging-prefix = "pwr++ "
 label-charging = %percentage%%
 
 format-discharging-prefix-foreground = ${colors.primary}
-format-discharging-prefix = "power-- "
+format-discharging-prefix = "pwr-- "
 label-discharging = %percentage%%
 
 label-full-foreground = ${colors.primary}
