--- a/polybar-config.ini
+++ b/polybar-config.ini
@@ -51,7 +51,7 @@ separator-foreground = ${colors.disabled}
 font-0 = iosevka:pixelsize=13;2
 
 modules-left = xworkspaces xwindow
-modules-right = battery pulseaudio memory cpu wlan date
+modules-right = battery pulseaudio cpu memory wlan date
 ;modules-right = battery filesystem pulseaudio memory cpu wlan date
 
 cursor-click = pointer
